# xml_lemmatiser_tagger

./: .gitignore  LICENSE  README  doAllRun.sh  prepare_corpus.sh  remove_previous_output.sh
applications/: loadApps
applications/morpheus/: instructions
applications/unibetacode-2.0.1/: AUTHORS  ChangeLog  Makefile  Makefile.am  Makefile.in  NEWS  README  config.status  configure  configure.ac
applications/unibetacode-2.0.1/examples/: byzantine.beta  byzantine.prep  byzantine.utf8  genesis.beta  genesis.utf8  greek-beta.txt
applications/unibetacode-2.0.1/man/: Makefile  Makefile.am  Makefile.in  libunibetacode.3  uni2beta.1  unibetacode.5  unibetaprep.1
applications/unibetacode-2.0.1/src/: Makefile  Makefile.am  Makefile.in  beta2uni  config.h  uni2beta
applications/unibetacode-2.0.1/src/libsrc/: ub_beta2coptic.c  ub_beta2coptic.h  ub_beta2greek.c  ub_beta2hebrew.c  ub_beta2hebrew.h  ub_coptic2beta.c  ub_coptic2beta.h  ub_hebrew2beta.c  ub_hebrew2beta.h
applications/unibetacode-2.0.1/src/libsrc/.deps/: ub_beta2coptic.Po  ub_beta2greek.Po  ub_beta2hebrew.Po  ub_coptic2beta.Po  ub_greek2beta.Po  ub_hebrew2beta.Po  ub_utf8.Po
applications/unibetacode-2.0.1/src/progsrc/: beta2uni.c  beta2uni.l  uni2beta.c  uni2beta.l  unibetaprep.c  unibetaprep.l
applications/unibetacode-2.0.1/src/progsrc/.deps/: beta2uni.Po  uni2beta.Po  unibetaprep.Po
applications/unibetacode-2.0.1/test/: Makefile  Makefile.am  Makefile.in  test-2beta-1  test-2beta-2  test-2utf8-1  test-2utf8-2  test-all  test-prep-1  ublibcheck.c
files/: configFile.txt  defaultHeader.xml
run/: allrunPar.sh  configFile.txt  crunchErrors  errors.txt  loadApps  log.txt
run/in/: Plato (Phaedrus).xml  Thuc5.xml  XenHel1.xml  XenMem3.xml  isocrates_02.xml  isocrates_06.xml  isocrates_07.xml  isocrates_08.xml
run/scripts/: 1_splitHeaderBody.sh  2_verticaliseBody.sh  3_crunch.sh  4_formatHeader.sh  allrun.sh  finish.sh
run/working/: processor1
scripts/: 1_splitHeaderBody.sh  2_verticaliseBody.sh  3_crunch.sh  4_reformatMetadata.sh  Antiphon4.vert  Antiphon6.vert  allrun.sh  allrunPar.sh  errors.txt  perseus_query.py  tag.py  tag_raw.py
scripts_bup/: 2_verticaliseBody.sh  3_crunch.sh  5_formatHeader.sh  allrunPar.sh  finish.sh
(+207 files in other folders)
