AC_INIT([unibetacode], [2.0.1], [unifoundry@unifoundry.com],
        [unibetacode], [http://www.unifoundry.com/unibetacode/])
AC_PREREQ([2.68])
AC_CONFIG_SRCDIR([src/progsrc/beta2uni.l])
AC_CONFIG_AUX_DIR([build-aux])
AM_INIT_AUTOMAKE([1.11 subdir-objects -Wall -Werror])
AC_CONFIG_HEADERS([src/config.h])
AC_CONFIG_FILES([Makefile man/Makefile src/Makefile test/Makefile])
AC_PROG_LEX
AC_PROG_CC
AC_PROG_LN_S
AM_PROG_AR
AC_PROG_RANLIB
AC_OUTPUT
