## Process this file with automake to produce Makefile.in

man_MANS = beta2uni.1 uni2beta.1 unibetaprep.1 \
	libunibetacode.3 \
	ub_beta2coptic.3 ub_beta2greek.3  ub_beta2hebrew.3 \
	ub_coptic2beta.3 ub_greek2beta.3  ub_hebrew2beta.3 \
	ub_codept2utf8.3 ub_utf82codept.3 \
	unibetacode.5

EXTRA_DIST = $(man_MANS)

